# company

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Accountant.h  Company.h  Developer.h  Employee.h  JsonParser.h  Manager.h
src/: Accountant.cpp  Company.cpp  Developer.cpp  JsonParser.cpp  Manager.cpp
